Fixed comment containers in dark mode

--- a/app/assets/stylesheets/sidebar.tailwind.css
+++ b/app/assets/stylesheets/sidebar.tailwind.css
@@ -66,7 +66,12 @@
         }
     }
 
+    .sidebar-colors {
+        @apply bg-gray-50 dark:bg-gray-900;
+    }
+
     .content-sidebar {
-        @apply bg-gray-50 dark:bg-gray-900 border-l overflow-auto max-h-screen;
+        @apply sidebar-colors;
+        @apply border-l overflow-auto max-h-screen;
     }
 }
